[tool.poetry]
name = "ros2-cuda-cudnn-template"
version = "0.0.0"
description = ""
authors = ["SAKAIRI Nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]
readme = "README.md"
packages = [{include = "ros2_cuda_cudnn_template"}]

[tool.poetry.dependencies]
python = "^3.10"
rocker = "^0.2.10"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
     \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | db
 )
 '''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = ""